fixed broken right align

--- a/fonts.css
+++ b/fonts.css
@@ -26,8 +26,7 @@
 
 @font-face {
     font-family: 'sharp_groteskmedium_20';
-    src: url('sharpgrotesk-medium20-webfont.woff2') format('woff2'),
-         url('sharpgrotesk-medium20-webfont.woff') format('woff');
+    src: url('sharpgrotesk-medium20-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
